[gd_scene load_steps=10 format=3 uid="uid://ci26oee24f1nj"]

[ext_resource type="Script" path="res://World.gd" id="1_d6wgs"]
[ext_resource type="PackedScene" uid="uid://poiiqfx767ws" path="res://player.tscn" id="1_vajfr"]
[ext_resource type="PackedScene" uid="uid://ch5cdrttnt2dl" path="res://slime.tscn" id="2_5mn6s"]
[ext_resource type="PackedScene" uid="uid://b563ksapfq2qu" path="res://bat.tscn" id="3_hvra3"]
[ext_resource type="PackedScene" uid="uid://b61scngo0hkjj" path="res://boss_1.tscn" id="5_7ndgt"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_db4ot"]
size = Vector2(239.5, 683.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ede3v"]
size = Vector2(1909.5, 154)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ryc1w"]
size = Vector2(1046, 125)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_si7yq"]
size = Vector2(161, 734)

[node name="World" type="Node2D"]
position = Vector2(-77, 58)
script = ExtResource("1_d6wgs")

[node name="Player" parent="." instance=ExtResource("1_vajfr")]
position = Vector2(700, 184)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(226, 42)
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-157, 219)
shape = SubResource("RectangleShape2D_db4ot")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2413, 174)
shape = SubResource("RectangleShape2D_db4ot")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(802.25, 340)
shape = SubResource("RectangleShape2D_ede3v")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(1922, 442)
shape = SubResource("RectangleShape2D_ryc1w")

[node name="Panel" type="Panel" parent="."]
offset_left = 74.0
offset_top = 298.0
offset_right = 1980.0
offset_bottom = 442.0

[node name="Panel2" type="Panel" parent="."]
offset_left = 2521.0
offset_top = -194.0
offset_right = 2730.0
offset_bottom = 734.0

[node name="Slime" parent="." instance=ExtResource("2_5mn6s")]
position = Vector2(2059, 328)

[node name="Bat" parent="." instance=ExtResource("3_hvra3")]
position = Vector2(496, 280)

[node name="Bat2" parent="." instance=ExtResource("3_hvra3")]
position = Vector2(596, 78)

[node name="Bat3" parent="." instance=ExtResource("3_hvra3")]
position = Vector2(946, 150)

[node name="Slime2" parent="." instance=ExtResource("2_5mn6s")]

[node name="Gate_Boss" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Gate_Boss"]
position = Vector2(2591, 233)
shape = SubResource("RectangleShape2D_si7yq")
debug_color = Color(0.247059, 0.607843, 0.517647, 0.419608)

[node name="Boss 1" parent="." instance=ExtResource("5_7ndgt")]
position = Vector2(1492, 258)

[connection signal="body_entered" from="Gate_Boss" to="." method="_on_gate_boss_body_entered"]
